refactor(backend): Simplify code and translate error messages to English
- Translate all French error messages to English in DocumentService and StreamingRagService
- Replace .collect(Collectors.toList()) with .toList() (Java 16+)
- Refactor DocumentType.fromExtension() to use Stream API for better maintainability
- Remove unused Collectors import

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>